introduce multiple images; fix videos